tests/suite/errors/e49_empty_unicode_escape.rs
// err: empty unicode escape sequence

fn main() {
    let _c = '\u{}';
}
